0824-Chocolate_custom_screen1

--- a/Customization_four_page.html
+++ b/Customization_four_page.html
@@ -70,18 +70,24 @@
                 <div id="left_sidebar_four_page_div2">
                     <p id="left_sidebar_four_page_div2_p">顏色</p>
                     <div id="left_sidebar_four_page_div2_1">
-                        <a href="#"><img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 2.svg"
-                                alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 3.svg"
-                                alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 4.svg"
-                                alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 5.svg"
-                                alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 6.svg"
-                                alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 7.svg"
-                                alt=""></a>
+                        <a href="#" id="Zone_four_white"><img
+                                src="./images/Custom_block/Customized_cards/left_sidebar/Frame 2.svg" alt=""
+                                id="Zone_four_white_img"></a>
+                        <a href="#" id="Zone_four_Almonds"><img
+                                src="./images/Custom_block/Customized_cards/left_sidebar/Frame 3.svg" alt=""
+                                id="Zone_four_Almonds_img"></a>
+                        <a href="#" id="Zone_four_Blue"><img
+                                src="./images/Custom_block/Customized_cards/left_sidebar/Frame 4.svg" alt=""
+                                id="Zone_four_Blue_img"></a>
+                        <a href="#" id="Zone_four_pink"><img
+                                src="./images/Custom_block/Customized_cards/left_sidebar/Frame 5.svg" alt=""
+                                id="Zone_four_pink_img"></a>
+                        <a href="#" id="Zone_four_brown"><img
+                                src="./images/Custom_block/Customized_cards/left_sidebar/Frame 6.svg" alt=""
+                                id="Zone_four_brown_img"></a>
+                        <a href="#" id="Zone_four_Green"><img
+                                src="./images/Custom_block/Customized_cards/left_sidebar/Frame 7.svg" alt=""
+                                id="Zone_four_Green_img"></a>
                     </div>
                     <div id="left_sidebar_four_page_div2_box">
                         <img src="./images/Custom_block/small_chocolate/Frame btn.svg" alt="">
