--- a/Customization_three_page.html
+++ b/Customization_three_page.html
@@ -86,12 +86,24 @@
                 <div id="left_sidebar_three_page_div2">
                     <p id="left_sidebar_three_page_div2_p">顏色</p>
                     <div id="left_sidebar_three_page_div2_1">
-                        <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 9.svg" alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 10.svg" alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 11.svg" alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 12.svg" alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 13.svg" alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 14.svg" alt=""></a>
+                        <a href="#" id="Zone_three_white">
+                            <img src="./images/Custom_block/box/left_sidebar/Frame 9.svg" alt=""
+                                id="Zone_three_white_img"></a>
+                        <a href="#" id="Zone_three_almonds">
+                            <img src="./images/Custom_block/box/left_sidebar/Frame 10.svg" alt=""
+                                id="Zone_three_almonds_img"></a>
+                        <a href="#" id="Zone_three_blue">
+                            <img src="./images/Custom_block/box/left_sidebar/Frame 11.svg" alt=""
+                                id="Zone_three_blue_img"></a>
+                        <a href="#" id="District_three_pink">
+                            <img src="./images/Custom_block/box/left_sidebar/Frame 12.svg" alt=""
+                                id="District_three_pink_img"></a>
+                        <a href="#" id="Zone_three_brown">
+                            <img src="./images/Custom_block/box/left_sidebar/Frame 13.svg" alt=""
+                                id="Zone_three_brown_img"></a>
+                        <a href="#" id="Zone_three_green">
+                            <img src="./images/Custom_block/box/left_sidebar/Frame 14.svg" alt=""
+                                id="Zone_three_green_img"></a>
                     </div>
                     <div id="left_sidebar_three_page_div2_box">
                         <img src="./images/Custom_block/small_chocolate/Frame btn.svg" alt="">
