--- a/Customization_two_page.html
+++ b/Customization_two_page.html
@@ -43,15 +43,19 @@
                 <div id="select_field1__second_page">
                     <p>口味</p>
                     <div id="select_field1__second_page_div">
-                        <a href="#" id="milk_chocolate_box"><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 4.svg" alt=""
+                        <a href="#" id="milk_chocolate_box"><img
+                                src="./images/Custom_block/small_chocolate/left_sidebar/Frame 4.svg" alt=""
                                 class="select_field1__second_page_img" id="milk_chocolate"></a>
-                                <!-- <img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 6-1.svg" alt=""> -->
-                        <a href="#" id="dark_chocolate_box"><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 5.svg" alt=""
+                        <!-- <img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 6-1.svg" alt=""> -->
+                        <a href="#" id="dark_chocolate_box"><img
+                                src="./images/Custom_block/small_chocolate/left_sidebar/Frame 5.svg" alt=""
                                 class="select_field1__second_page_img" id="dark_chocolate"></a>
-                        <a href="#" id="white_chocolatea_box"><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 6.svg" alt=""
+                        <a href="#" id="white_chocolatea_box"><img
+                                src="./images/Custom_block/small_chocolate/left_sidebar/Frame 6.svg" alt=""
                                 class="select_field1__second_page_img" id="white_chocolatea">
-                        <a href="#" id="strawberry_chocolate_box"><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 7.svg" alt=""
-                                class="select_field1__second_page_img" id="strawberry_chocolate"></a>
+                            <a href="#" id="strawberry_chocolate_box"><img
+                                    src="./images/Custom_block/small_chocolate/left_sidebar/Frame 7.svg" alt=""
+                                    class="select_field1__second_page_img" id="strawberry_chocolate"></a>
                     </div>
                     <div id="select_field1_btn">
                         <a href="#"><img src="./images/Custom_block/small_chocolate/Frame btn.svg" alt=""></a>
@@ -60,10 +64,12 @@
                 <div id="select_field2__second_page">
                     <p id="select_field2__second_page_p1">內餡</p>
                     <div id="select_field2__second_page_div1">
-                        <a href="#"><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 8.svg" alt=""
-                                class="select_field2_img"></a>
-                        <a href="#"><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 9.svg" alt=""
-                                class="select_field2_img"></a>
+                        <a href="#" id="original_flavor_a">
+                            <img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 8.svg" alt=""
+                                class="select_field2_img" id="original_flavor_img"></a>
+                        <a href="#" id="nut_a">
+                            <img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 9.svg" alt=""
+                                class="select_field2_img" id="nut_img"></a>
                     </div>
                     <div id="select_field2__second_page_hr">
                         <img src="./images/Custom_block/small_chocolate/left_sidebar/Rectangle 999.svg" alt="">
@@ -71,12 +77,15 @@
                     <div>
                         <p id="select_field2__second_page_p2">果乾</p>
                         <div id="select_field2__second_page_div2">
-                            <a href="#"><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 10.svg"
-                                    alt="" class="select_field2__second_page_img"></a>
-                            <a href="#"><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 11.svg"
-                                    alt="" class="select_field2__second_page_img"></a>
-                            <a href="#"><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 12.svg"
-                                    alt="" class="select_field2__second_page_img"></a>
+                            <a href="#" id="cranberry_a">
+                                <img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 10.svg" alt=""
+                                    class="select_field2__second_page_img" id="cranberry_img"></a>
+                            <a href="#" id="tangerine_a">
+                                <img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 11.svg" alt=""
+                                    class="select_field2__second_page_img" id="tangerine_img"></a>
+                            <a href="#" id="comprehensive_a">
+                                <img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 12.svg" alt=""
+                                    class="select_field2__second_page_img" id="comprehensive_img"></a>
                         </div>
                     </div>
                     <div id="select_field2__second_page_hr">
@@ -85,12 +94,15 @@
                     <div>
                         <p id="select_field2__second_page_p3">果醬</p>
                         <div id="select_field2__second_page_div3">
-                            <a href="#"><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 13.svg"
-                                    alt="" class="select_field2__second_page_img"></a>
-                            <a href="#"><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 14.svg"
-                                    alt="" class="select_field2__second_page_img"></a>
-                            <a href="#"><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 15.svg"
-                                    alt="" class="select_field2__second_page_img"></a>
+                            <a href="#" id="berries_a">
+                                <img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 13.svg" alt=""
+                                    class="select_field2__second_page_img" id="berries_img"></a>
+                            <a href="#" id="citrus_filling_a">
+                                <img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 14.svg" alt=""
+                                    class="select_field2__second_page_img" id="citrus_filling_img"></a>
+                            <a href="#" id="lemon_a">
+                                <img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 15.svg" alt=""
+                                    class="select_field2__second_page_img" id="lemon_img"></a>
                         </div>
                     </div>
                     <div id="select_field2__second_page_btn">
