--- a/shop_page2.html
+++ b/shop_page2.html
@@ -46,6 +46,7 @@
                 const items = [
                     {
                         id: "1",
+                        counts:'12',
                         pic: "./images/shop_images/item1.jpg",
                         name: "2025新年賀禮巧克力禮盒12入",
                         price: '2,600',
@@ -53,6 +54,7 @@
 
                     }, {
                         id: '2',
+                        counts:'12',
                         pic: "./images/shop_images/item2.jpg",
                         name: "2025新年賀禮巧克力禮盒12入",
                         price: '200',
@@ -60,14 +62,16 @@
 
                     }, {
                         id: '3',
+                        counts:'8',
                         pic: "./images/shop_images/item3.jpg",
-                        name: "2025新年賀禮巧克力禮盒12入",
+                        name: "2025新年賀禮巧克力禮盒8入",
                         price: '1,600',
                         text: "每顆巧克力皆由大師手工製作，結合頂級原料，讓您體驗無可比擬的奢華口感。"
 
 
                     }, {
                         id: '4',
+                        counts:'12',
                         pic: "./images/shop_images/item4.jpg",
                         name: "2025新年賀禮巧克力禮盒12入",
                         price: '2,600',
