0825-Chocolate_custom_screen1

--- a/Customization.html
+++ b/Customization.html
@@ -376,12 +376,8 @@
                     </div>
                 </div>
                 <div class="middle_box">
-                    <div>
+                    <div id="middle_box_divbox">
                         <img src="./images/Custom_block/middle/downloadedImage-Photoroom 5.svg" alt="">
-                        <!-- <img src="./image/middle/downloadedImage-Photoroom 4.svg" alt="" class="middle_box_img1"> -->
-                        <!-- <img src="./image/middle/downloadedImage 1.svg" alt="" class="middle_box_img2"> -->
-                        <!-- <img src="./image/middle/downloadedImage 2.svg" alt="" class="middle_box_img3"> -->
-                        <!-- <img src="./image/middle/downloadedImage 3.svg" alt="" class="middle_box_img4"> -->
                     </div>
                 </div>
             </div>
@@ -412,8 +408,7 @@
                             <!-- <p>縮放</p> -->
                         </a></li>
                     <li class="menu_below_li" id="menu_below_li_left1"><a href="#" id="menu_below_bug"><img
-                                src="./images/Custom_block/menu_below/Frame 3.svg"
-                                alt="" id="menu_below_bug_img">
+                                src="./images/Custom_block/menu_below/Frame 3.svg" alt="" id="menu_below_bug_img">
                             <!-- <p>旋轉</p> -->
                         </a></li>
                     <li class="menu_below_li" id="garbage_can"><a href="#"><img
@@ -430,7 +425,8 @@
                             <!-- <p>上一步</p> -->
                         </a></li>
                     <li class="menu_below_li" id="menu_below_li_right3"><a href="#">
-                            <img src="./images/Custom_block/menu_below/Frame 7.svg" alt="" id="menu_below_li_right3_img">
+                            <img src="./images/Custom_block/menu_below/Frame 7.svg" alt=""
+                                id="menu_below_li_right3_img">
                             <!-- <p>重製</p> -->
                         </a></li>
                 </ul>
@@ -473,6 +469,7 @@
     <!-- <script src="./js/jq.js"></script> -->
     <script src="./js/Customization.js"></script>
     <script src="./js/Drag_function.js"></script>
+    <script src="./js/function_Block_Below.js"></script>
 </body>
 
 </html>
