--- a/Customization_three_page.html
+++ b/Customization_three_page.html
@@ -115,21 +115,29 @@
                         <p id="left_sidebar_three_page_div3_div_p">顏色</p>
                     </div>
                     <div id="left_sidebar_three_page_div3_div_1">
-                        <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 15.svg" alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 16.svg" alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 17.svg" alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 18.svg" alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 19.svg" alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 20.svg" alt=""></a>
+                        <a href="#" id=""><img src="./images/Custom_block/box/left_sidebar/Frame 15.svg" alt=""></a>
+                        <a href="#" id="ribbon_red"><img src="./images/Custom_block/box/left_sidebar/Frame 16.svg"
+                                alt="" id="ribbon_red_img"></a>
+                        <a href="#" id="ribbon_orange"><img src="./images/Custom_block/box/left_sidebar/Frame 17.svg"
+                                alt="" id="ribbon_orange_img"></a>
+                        <a href="#" id="ribbon_yellow"><img src="./images/Custom_block/box/left_sidebar/Frame 18.svg"
+                                alt="" id="ribbon_yellow_img"></a>
+                        <a href="#" id="ribbon_pink"><img src="./images/Custom_block/box/left_sidebar/Frame 19.svg"
+                                alt="" id="ribbon_pink_img"></a>
+                        <a href="#" id=""><img src="./images/Custom_block/box/left_sidebar/Frame 20.svg" alt=""></a>
                     </div>
                     <div id="left_sidebar_three_page_div3_hr">
                         <img src="./images/Custom_block/box/Rectangle 4.svg" alt="">
                     </div>
                     <div id="left_sidebar_three_page_div3_div_2">
-                        <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 21.svg" alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 22.svg" alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 23.svg" alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 24.svg" alt=""></a>
+                        <a href="#" id="bow_tie1"><img src="./images/Custom_block/box/left_sidebar/Frame 21.svg" alt=""
+                                id="bow_tie1_img"></a>
+                        <a href="#" id="bow_tie2"><img src="./images/Custom_block/box/left_sidebar/Frame 22.svg" alt=""
+                                id="bow_tie2_img"></a>
+                        <a href="#" id="bow_tie3"><img src="./images/Custom_block/box/left_sidebar/Frame 23.svg" alt=""
+                                id="bow_tie3_img"></a>
+                        <a href="#" id="bow_tie4"><img src="./images/Custom_block/box/left_sidebar/Frame 24.svg" alt=""
+                                id="bow_tie4_img"></a>
                         <!-- <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 25.svg" alt=""></a> -->
                         <!-- <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 26.svg" alt=""></a> -->
                     </div>
@@ -174,35 +182,35 @@
         <div id="menu_below">
             <div>
                 <ul>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu_below/Frame 1-1.svg"
-                                alt="">
-                            <p>選取</p>
+                    <li class="menu_below_li" id="Select_function"><a href="#"><img
+                                src="./images/Custom_block/menu_below/Frame 1.svg" alt="" id="Select_function_img">
+                            <!-- <p>選取</p> -->
                         </a></li>
                     <li class="menu_below_li" id="menu_below_li_left2"><a href="#"><img
-                                src="./images/Custom_block/menu_below/Frame 2-1.svg" alt="">
-                            <p>縮放</p>
+                                src="./images/Custom_block/menu_below/Frame 2.svg" alt="" id="menu_below_li_left2_img">
+                            <!-- <p>縮放</p> -->
                         </a></li>
                     <li class="menu_below_li" id="menu_below_li_left1"><a href="#" id="menu_below_bug"><img
-                                src="./images/Custom_block/menu_below/material-symbols-light_crop-rotate-rounded.svg"
-                                alt="">
-                            <p>旋轉</p>
+                                src="./images/Custom_block/menu_below/Frame 3.svg" alt="" id="menu_below_bug_img">
+                            <!-- <p>旋轉</p> -->
                         </a></li>
                     <li class="menu_below_li" id="garbage_can"><a href="#"><img
-                                src="./images/Custom_block/menu_below/Frame 3-1.svg" alt="">
-                            <p>刪除</p>
+                                src="./images/Custom_block/menu_below/Frame 4.svg" alt="" id="garbage_can_img">
+                            <!-- <p>刪除</p> -->
                         </a>
                     </li>
                     <li class="menu_below_li" id="menu_below_li_right1"><a href="#"><img
-                                src="./images/Custom_block/menu_below/Frame 4-1.svg" alt="">
-                            <p>翻轉</p>
+                                src="./images/Custom_block/menu_below/Frame 5.svg" alt="" id="menu_below_li_right1_img">
+                            <!-- <p>翻轉</p> -->
                         </a></li>
                     <li class="menu_below_li" id="menu_below_li_right2"><a href="#"><img
-                                src="./images/Custom_block/menu_below/Frame 5-1.svg" alt="">
-                            <p>上一步</p>
+                                src="./images/Custom_block/menu_below/Frame 6.svg" alt="" id="menu_below_li_right2_img">
+                            <!-- <p>上一步</p> -->
                         </a></li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu_below/Frame 6-1.svg"
-                                alt="">
-                            <p>重製</p>
+                    <li class="menu_below_li" id="menu_below_li_right3"><a href="#">
+                            <img src="./images/Custom_block/menu_below/Frame 7.svg" alt=""
+                                id="menu_below_li_right3_img">
+                            <!-- <p>重製</p> -->
                         </a></li>
                 </ul>
             </div>
@@ -224,6 +232,7 @@
         </div>
     </main>
     <script src="./js/Customization_three.js"></script>
+    <script src="./js/function_Block_Below.js"></script>
 </body>
 
 </html>
