--- a/Customization_two_page.html
+++ b/Customization_two_page.html
@@ -171,35 +171,35 @@
         <div id="menu_below">
             <div>
                 <ul>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu_below/Frame 1-1.svg"
-                                alt="">
-                            <p>選取</p>
+                    <li class="menu_below_li" id="Select_function"><a href="#"><img
+                                src="./images/Custom_block/menu_below/Frame 1.svg" alt="" id="Select_function_img">
+                            <!-- <p>選取</p> -->
                         </a></li>
                     <li class="menu_below_li" id="menu_below_li_left2"><a href="#"><img
-                                src="./images/Custom_block/menu_below/Frame 2-1.svg" alt="">
-                            <p>縮放</p>
+                                src="./images/Custom_block/menu_below/Frame 2.svg" alt="" id="menu_below_li_left2_img">
+                            <!-- <p>縮放</p> -->
                         </a></li>
                     <li class="menu_below_li" id="menu_below_li_left1"><a href="#" id="menu_below_bug"><img
-                                src="./images/Custom_block/menu_below/material-symbols-light_crop-rotate-rounded.svg"
-                                alt="">
-                            <p>旋轉</p>
+                                src="./images/Custom_block/menu_below/Frame 3.svg" alt="" id="menu_below_bug_img">
+                            <!-- <p>旋轉</p> -->
                         </a></li>
                     <li class="menu_below_li" id="garbage_can"><a href="#"><img
-                                src="./images/Custom_block/menu_below/Frame 3-1.svg" alt="">
-                            <p>刪除</p>
+                                src="./images/Custom_block/menu_below/Frame 4.svg" alt="" id="garbage_can_img">
+                            <!-- <p>刪除</p> -->
                         </a>
                     </li>
                     <li class="menu_below_li" id="menu_below_li_right1"><a href="#"><img
-                                src="./images/Custom_block/menu_below/Frame 4-1.svg" alt="">
-                            <p>翻轉</p>
+                                src="./images/Custom_block/menu_below/Frame 5.svg" alt="" id="menu_below_li_right1_img">
+                            <!-- <p>翻轉</p> -->
                         </a></li>
                     <li class="menu_below_li" id="menu_below_li_right2"><a href="#"><img
-                                src="./images/Custom_block/menu_below/Frame 5-1.svg" alt="">
-                            <p>上一步</p>
+                                src="./images/Custom_block/menu_below/Frame 6.svg" alt="" id="menu_below_li_right2_img">
+                            <!-- <p>上一步</p> -->
                         </a></li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu_below/Frame 6-1.svg"
-                                alt="">
-                            <p>重製</p>
+                    <li class="menu_below_li" id="menu_below_li_right3"><a href="#">
+                            <img src="./images/Custom_block/menu_below/Frame 7.svg" alt=""
+                                id="menu_below_li_right3_img">
+                            <!-- <p>重製</p> -->
                         </a></li>
                 </ul>
             </div>
@@ -225,6 +225,7 @@
     </main>
     <script src="./js/Customization_two.js"></script>
     <script src="./js/Drag_function_two.js"></script>
+    <script src="./js/function_Block_Below.js"></script>
 </body>
 
 </html>
