--- a/shop_page2.html
+++ b/shop_page2.html
@@ -141,19 +141,27 @@
                     },
                     {
                         id: '13',
-                        counts: '4',
-                        pic: './images/shop_images/item4.jpg',
+                        counts: '6',
+                        pic: './images/shop_images/item13.jpg',
                         name: '璀璨七夕-情人節禮盒',
-                        price: '2800',
+                        price: '800',
                         text: '專為情人節設計的璀璨禮盒，展現愛意，巧克力的每一口都彷彿融化在心中。'
                     },
                     {
                         id: '14',
-                        counts: '12',
-                        pic: './images/shop_images/item5-1.jpg',
+                        counts: '6',
+                        pic: './images/shop_images/item14.jpg',
                         name: '熱戀之吻-情人節禮盒',
-                        price: '3,000',
+                        price: '980',
                         text: '熱戀之吻巧克力禮盒，特別為情人節打造，甜美的巧克力表達最深情的告白。'
+                    },
+                    {
+                        id: '15',
+                        counts: '6',
+                        pic: './images/shop_images/item15.jpg',
+                        name: '生日快樂-慶生禮盒',
+                        price: '980',
+                        text: '生日巧克力禮盒，特別為慶祝生日打造，甜美的巧克力表達最真誠的祝福。'
                     }
                 ];
 
